# echobot-rs

./: .gitignore  AUDIT.md  Cargo.toml  README.md  RUST_PORT.md
crates/echobot-app/: Cargo.toml  build.rs
crates/echobot-app/src/: create_app.rs  error.rs  lib.rs  router.rs  runtime.rs  schemas.rs  state.rs
crates/echobot-app/src/routers/: attachments.rs  channels.rs  chat.rs  cron.rs  health.rs  heartbeat.rs  mod.rs  roles.rs  sessions.rs  web.rs
crates/echobot-app/src/services/: delivery.rs  mod.rs  route_sessions.rs  session_service.rs
crates/echobot-app/src/services/web_console/: mod.rs
crates/echobot-app/src/services/web_console/live2d/: annotations.rs  catalog.rs  constants.rs  metadata.rs  mod.rs  models.rs  uploads.rs
crates/echobot-app/tests/: health_integration.rs  web_assets_integration.rs
crates/echobot-asr/: Cargo.toml
crates/echobot-asr/src/: audio.rs  base.rs  factory.rs  lib.rs  models.rs  realtime.rs  service.rs  vad.rs
crates/echobot-asr/src/providers/: mod.rs  openai.rs  sherpa.rs
crates/echobot-cli/: Cargo.toml
crates/echobot-cli/src/: app.rs  bridge.rs  chat.rs  common.rs  gateway.rs  lib.rs  main.rs  runtime_assembly.rs
crates/echobot-cli/tests/: chat_e2e.rs  cli_help.rs
crates/echobot-cli/tests/common/: mod.rs
crates/echobot-core/: Cargo.toml
crates/echobot-core/src/: attachments.rs  config.rs  error.rs  images.rs  lib.rs  models.rs  naming.rs  turn_inputs.rs
crates/echobot-desktop/: Cargo.toml  tauri.conf.json
crates/echobot-desktop/capabilities/: default.json
crates/echobot-desktop/src/: first_run.rs  main.rs
crates/echobot-desktop/web-stub/: index.html
crates/echobot-orchestration/: Cargo.toml
crates/echobot-orchestration/src/: coordinator.rs  decision.rs  jobs.rs  lib.rs  roleplay.rs  roles.rs  route_modes.rs
crates/echobot-providers/: Cargo.toml
crates/echobot-providers/src/: base.rs  lib.rs  openai_compatible.rs  settings.rs
crates/echobot-runtime/: Cargo.toml
crates/echobot-runtime/src/: agent_traces.rs  bootstrap.rs  error.rs  lib.rs  scheduled_tasks.rs  session_runner.rs  sessions.rs  settings.rs  system_prompt.rs  turns.rs
crates/echobot-runtime/src/scheduling/: cron.rs  heartbeat.rs  mod.rs
crates/echobot-skill/: Cargo.toml
crates/echobot-skill/src/: lib.rs  models.rs  parsing.rs  registry.rs  tools.rs
crates/echobot-tools/: Cargo.toml
crates/echobot-tools/src/: base.rs  builtin.rs  cron.rs  filesystem.rs  git.rs  lib.rs  media.rs  memory.rs  planning.rs  shell.rs  web.rs
crates/echobot-tts/: Cargo.toml
crates/echobot-tts/src/: base.rs  factory.rs  lib.rs  service.rs  synthesis.rs  text.rs
crates/echobot-tts/src/providers/: edge.rs  kokoro.rs  mod.rs  openai_compatible.rs
