[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.75"

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
bytes = "1"
regex = "1"
once_cell = "1"
dashmap = "6"
dotenvy = "0.15"
base64 = "0.22"
mime = "0.3"
toml = "0.8"
axum = { version = "0.7", default-features = false, features = ["json", "multipart", "tokio", "http1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors"] }
hyper = { version = "1" }
hound = { version = "3.5" }
symphonia = { version = "0.5", features = ["all"] }
parking_lot = "0.12"
include_dir = "0.7"
mime_guess = "2"
echobot-core = { path = "crates/echobot-core" }
echobot-runtime = { path = "crates/echobot-runtime" }
echobot-orchestration = { path = "crates/echobot-orchestration" }
echobot-tts = { path = "crates/echobot-tts" }
echobot-asr = { path = "crates/echobot-asr" }
