[workspace]
members = ["crates/*"]
resolver = "2"

[workspace.package]
edition = "2021"
version = "0.1.0"
license = "MIT"
rust-version = "1.75"

# Release profile for the desktop app. LTO + single codegen unit
# gives ~30-40% smaller binaries; `strip` removes debug symbols.
# `panic = "abort"` shrinks the panic-handling runtime. Total
# echobot.exe lands around 25-30MB with these settings.
[profile.release]
opt-level = 3
lto = "fat"
codegen-units = 1
strip = "symbols"
panic = "abort"
incremental = false

[workspace.dependencies]
tokio = { version = "1", features = ["full"] }
serde = { version = "1", features = ["derive"] }
serde_json = "1"
anyhow = "1"
thiserror = "1"
async-trait = "0.1"
futures = "0.3"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
chrono = { version = "0.4", features = ["serde"] }
uuid = { version = "1", features = ["v4", "serde"] }
clap = { version = "4", features = ["derive"] }
reqwest = { version = "0.12", features = ["json", "stream", "multipart"] }
rustls = { version = "0.23", default-features = false, features = ["aws-lc-rs", "std", "logging", "tls12"] }
bytes = "1"
regex = "1"
once_cell = "1"
dashmap = "6"
dotenvy = "0.15"
base64 = "0.22"
mime = "0.3"
toml = "0.8"
axum = { version = "0.7", default-features = false, features = ["json", "multipart", "tokio", "http1"] }
tower = { version = "0.5", features = ["util"] }
tower-http = { version = "0.6", features = ["fs", "trace", "cors", "timeout"] }
hyper = { version = "1" }
hound = { version = "3.5" }
symphonia = { version = "0.5", features = ["all"] }
parking_lot = "0.12"
include_dir = "0.7"
mime_guess = "2"
tempfile = "3"
echobot-core = { path = "crates/echobot-core" }
echobot-runtime = { path = "crates/echobot-runtime" }
echobot-orchestration = { path = "crates/echobot-orchestration" }
echobot-providers = { path = "crates/echobot-providers" }
echobot-tools = { path = "crates/echobot-tools" }
echobot-skill = { path = "crates/echobot-skill" }
echobot-tts = { path = "crates/echobot-tts" }
echobot-asr = { path = "crates/echobot-asr" }
echobot-app = { path = "crates/echobot-app" }
