[package]
name = "echobot-app"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
echobot-core = { workspace = true }
echobot-runtime = { workspace = true }
echobot-orchestration = { workspace = true }
echobot-tts = { workspace = true }
echobot-asr = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
tower-http = { workspace = true }
hyper = { workspace = true }
tokio = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
anyhow = { workspace = true }
async-trait = { workspace = true }
tracing = { workspace = true }
uuid = { workspace = true }
chrono = { workspace = true }
bytes = { workspace = true }
mime_guess = { workspace = true }
include_dir = { workspace = true }
dotenvy = { workspace = true }
dashmap = { workspace = true }
