[package]
name = "echobot-asr"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
echobot-core = { workspace = true }
echobot-runtime = { workspace = true }
tokio = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
reqwest = { workspace = true }
futures = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
hound = { workspace = true }
base64 = { workspace = true }
symphonia = { workspace = true }
parking_lot = { workspace = true }
