[package]
name = "echobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[[bin]]
name = "echobot"
path = "src/main.rs"

[dependencies]
echobot-core = { path = "../echobot-core" }
echobot-runtime = { path = "../echobot-runtime" }
echobot-orchestration = { path = "../echobot-orchestration" }
echobot-providers = { path = "../echobot-providers" }
echobot-tools = { path = "../echobot-tools" }
echobot-skill = { path = "../echobot-skill" }

clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
