[package]
name = "echobot-cli"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[lib]
name = "echobot_cli"
path = "src/lib.rs"

[[bin]]
name = "echobot"
path = "src/main.rs"

[dependencies]
echobot-core.workspace = true
echobot-runtime.workspace = true
echobot-orchestration.workspace = true
echobot-providers.workspace = true
echobot-tools.workspace = true
echobot-skill.workspace = true
echobot-tts.workspace = true
echobot-asr.workspace = true
echobot-app.workspace = true

clap = { workspace = true }
anyhow = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
tracing-subscriber = { workspace = true }
dotenvy = { workspace = true }
async-trait = { workspace = true }
serde = { workspace = true }
serde_json = { workspace = true }
futures = { workspace = true }
chrono = { workspace = true }
regex = { workspace = true }
once_cell = { workspace = true }
rustls = { workspace = true }
axum = { workspace = true }
tower = { workspace = true }
hyper = { workspace = true }
