[package]
name = "echobot-providers"
version.workspace = true
edition.workspace = true
license.workspace = true
rust-version.workspace = true

[dependencies]
echobot-core = { path = "../echobot-core" }

serde = { workspace = true }
serde_json = { workspace = true }
anyhow = { workspace = true }
thiserror = { workspace = true }
async-trait = { workspace = true }
futures = { workspace = true }
reqwest = { workspace = true }
tokio = { workspace = true }
tracing = { workspace = true }
bytes = { workspace = true }
regex = { workspace = true }
async-stream = "0.3"

[dev-dependencies]
tokio = { workspace = true, features = ["macros", "rt"] }
